<resources>
    <string name="app_name">JIJI POS</string>
    <string name="welcome_note">
        JIJI POS, Pay and Sell them your way
    </string>
    <string name="splash_desc">
        The ultimate business partner fast, smart,
        and reliable.Track every coin and
        manage your shop
    </string>
    <string name="splashLoginBtn">Login</string>
    <string name="login">Login</string>
    <string name="splashRegisterBtn">Create an Account</string>
    <string name="loginDescription">Access your JIJI POS dashboard securely</string>
    <string name="loginPhoneHint">Phone Number</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginBtn">SIGN IN</string>
    <string name="or">OR</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginWithGoogle">Login with google</string>
    <string name="dontHaveAccoun">Don`t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="back">back</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="noReceiptDescription">No scanned receipts found.\nGo to Scan QR to save your first invoice!</string>
    <string name="myReceipts">My Receipts</string>
    <string name="loginWithApple">Continue with Apple</string>
    <string name="loginWithFacebook">Continue with Facebook</string>
    <string name="loginArtwork">Decorative artwork</string>
</resources>